# codex-app-transfer

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  ARCHITECTURE_PROTOCOL_GUIDE.md  CHANGELOG.md  Cargo.toml  Makefile  NOTICE  ONBOARDING.md  README.en.md  README.md  build.spec  codex-snap.md  main.py  messages-responses-protocol-task-tree.md  pyproject.toml  v1.0.3-gap-task-plan.md
.githooks/: pre-push
.github/: dependabot.yml
.github/scripts/: check_provider_rate_drift.py
.github/workflows/: ci.yml  code-graph.yml  no-ai-coauthor.yml  pages.yml  provider-rate-drift.yml  release.yml  superpowers-version-check.yml  weekly-cf-check.yml  weekly-kimi-ua-check.yml
agent/: issues.md
backend/: adapter_utils.py  api_adapters.py  base_adapter.py  chat_responses_adapter.py  config.py  deployment_affinity.py  main.py  model_alias.py  openai_adapter.py  provider_tools.py  provider_workarounds.py  proxy.py  registry.py  response_id_codec.py  responses_adapter.py  session_cache.py  streaming_adapter.py
crates/adapters/: Cargo.toml
crates/codex_integration/: Cargo.toml
crates/conversation_export/: Cargo.toml
crates/conversation_export/src/: export.rs  lib.rs  list.rs  parse.rs  redact.rs  repair.rs  trash_ops.rs  types.rs
crates/desktop_app/: Cargo.toml  build.rs
crates/desktop_app/src/: app.rs  main.rs
crates/desktop_app/src/i18n/: mod.rs  strings.toml
crates/desktop_app/src/page/: dashboard.rs  desktop.rs  guide.rs  mod.rs  providers.rs  providers_add.rs  proxy.rs  settings.rs
crates/desktop_app/src/theme/: mod.rs
crates/gemini_oauth/: Cargo.toml
crates/gemini_oauth/examples/: zai_login.rs
crates/gemini_oauth/src/: account_pool.rs  cloud_code.rs  constants.rs  flow.rs  lib.rs  pkce.rs  service.rs  token.rs
crates/gemini_oauth/src/antigravity/: cloud_code.rs  flow.rs  mod.rs  models.rs  quota.rs  static_models.rs
crates/gemini_oauth/src/grok_build/: mod.rs  token.rs
crates/gemini_oauth/src/qoder/: login.rs  mod.rs  pool.rs  token.rs
crates/gemini_oauth/src/trae/: constants.rs  crypto.rs  device.rs  flow.rs  mod.rs  token.rs
crates/gemini_oauth/src/workbuddy/: login.rs  mod.rs  pool.rs  token.rs
crates/gemini_oauth/src/zai/: coding_plan.rs  constants.rs  flow.rs  mod.rs  token.rs
crates/gemini_oauth/tests/: zai_login_e2e.rs
crates/http/: Cargo.toml
crates/http/src/: fetch.rs  impersonating.rs  lib.rs  router.rs  search.rs
crates/http/src/headless/: detect.rs  download.rs  mod.rs
crates/http/tests/: cf_bypass.rs  headless_fetch.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: chat_conversation.rs  diagnostics.rs  fake_account.rs  forward.rs  lib.rs  resolver.rs  server.rs  telemetry.rs  trace_store.rs  validation.rs  ws_passthrough.rs
crates/proxy/tests/: auth_and_routing.rs  cache_miss_e2e.rs  forward_trace.rs  responses_observe_e2e.rs  streaming_passthrough.rs
crates/proxy/tests/common/: mod.rs
crates/qoder_auth/: Cargo.toml
crates/qoder_auth/assets/: qoder_auth_wasm_bg.wasm
crates/qoder_auth/src/: body.rs  lib.rs
crates/registry/: Cargo.toml
crates/usage_tracker/: Cargo.toml
crates/usage_tracker/src/: lib.rs
crates/usage_tracker/src/vendored_ccusage/: date_utils.rs  error.rs  fast.rs  mod.rs  types.rs  utils.rs
crates/usage_tracker/src/vendored_ccusage/codex/: mod.rs  parser.rs  paths.rs  types.rs
docker/linux-builder/: build.sh
docker/windows-builder/: build.sh
docs/: CHANGELOG.md  api-route-status.md  build.md  cleanup-plan.md  followup-tracker.md  kimi-reasoning-truncation-investigation.md  migration-plan.md  protocol-unification-rfc-phase1.md  protocol-unification-rfc-phase5-anthropic-messages.md  release-notes-v2.0.0.md  v2.0.7-vs-python-gap-scan.md  v3-egui-native-migration.md  web-search-implementation-tracker.md
docs/followup/: 23-grok-web-url-citation-redundancy.md  24-codex-agents-md-managed-block.md  25-codex-mgmt-four-in-one-page.md  26-plugins-mcp-protocol-binding-ui-hint.md  27-codex-desktop-double-splash-on-plugin-unlock.md  33-windows-plugin-unlock-msix-store.md  34-update-client-rsa-signature-verify.md  35-macos-update-translocation-quarantine-precheck.md  36-windows-update-nsis-install-dir-preserve.md  37-download-asset-toctou-and-bad-sha-test.md  38-codex-macos-seatbelt-network-access-bug.md  39-shell-to-apply-patch-edit-and-append.md  39-shell-to-apply-patch-normalize-fallback.md  40-mcp-marketplace-deeplink-hide.md  41-config-toml-rmw-locking.md
docs/investigation/: protocol-conversion-3way-comparison.md
docs/plans/: 2026-05-13-messages-responses-protocol.md
docs/release-notes/: v2.1.13.md  v2.1.14.md
feedback-worker/: .env.example  README.md  setup-secrets.sh  worker.js  wrangler.toml
frontend/: env.d.ts  gallery.html  index.html  node_modules  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-old/css/: base.css  tokens.css
frontend-old/js/: app.js  i18n.js
frontend/css/: responsive.css  style.css
frontend/js/: api.js  app.js  i18n.js
frontend/src/: App.svelte  App.vue  app.css  main.ts
macos/: build-macos.sh  build-macos.spec
release/: Codex-App-Transfer-release-public.pem  latest.json  latest.json.sig
release-notes/: v2.1.14.md  v2.1.15.md  v2.1.18.md  v2.2.0.md  v2.2.1.md  v2.3.0.md  v2.3.1.md  v2.3.4.md  v2.4.1.md  v2.4.2.md  v2.4.3.md  v2.4.4.md  v2.4.5.md
scripts/: check-test-repo-drift.sh  check_acknowledgements.py  check_release_notes_present.py  gen_registry_fixtures.py  install-hooks.sh  release_assets.py
site/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
site/src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: chat_guard_patch.js  trace_viewer.html
src-tauri/src/: anyrouter_quota.rs  codex_chat_model_injector.rs  codex_conversation_strip_injector.rs  codex_plugin_unlocker.rs  codex_quota_injector.rs  codex_real_account.rs  codex_stash_injector.rs  codex_theme_injector.rs  glm_quota.rs  (+20 more)
tests/: test_isolation.py  test_replay_smoke.py
xtask/: Cargo.toml
xtask/src/: main.rs  release_bundle.rs
(+274 files in other folders)
