[package]
name = "xtask"
version = "0.1.0"
description = "Internal cleanup tooling: fixture generation + release bundle (Phase 3 port of scripts/*.py)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# preserve_order 保字节级 round-trip; 与 crates/registry 同
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }

# gen-fixtures 直接复用 registry crate 的 schema + 内置预设数据
codex-app-transfer-registry = { path = "../crates/registry" }

# release-bundle 子命令(Commit D 启用):
# rsa = { version = "0.9", features = ["sha2"] }
# sha2 = "0.10"
# base64 = "0.22"
# chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# walkdir = "2"
# regex = "1"
