[package]
name = "codex-app-transfer-conversation-export"
version = "0.1.0"
description = "Codex CLI rollout JSONL session list/parse + Markdown / JSON / raw JSONL 导出(#271)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
