[package]
name = "codex-app-transfer-desktop-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# bin 入口(W2 起步;W7 扩展打包流程)
[[bin]]
name = "desktop_app"
path = "src/main.rs"

[build-dependencies]
toml = "0.8"
phf_codegen = "0.11"
serde = { version = "1", features = ["derive"] }

[dependencies]
# UI 框架
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
# 静态 phf 表用,build.rs 端 phf_codegen 输出 phf::Map<&str, [&str; 2]>
phf = "0.11"
# 共享 state(W1 抽出的 scaffolding)
codex-app-transfer-desktop-state = { path = "../desktop_state" }
# 之后会引(W3+):
# codex-app-transfer-admin-api = { path = "../admin_api" }
# codex-app-transfer-proxy-runner = { path = "../proxy_runner" }
# codex-app-transfer-codex-integration = { path = "../codex_integration" }
# codex-app-transfer-registry = { path = "../registry" }
serde = { version = "1", features = ["derive"] }
