[package]
name = "codex-app-transfer-proxy"
version = "0.1.0"
description = "HTTP/SSE forwarding proxy core (Stage 2 skeleton port of backend/proxy.py)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
codex-app-transfer-registry = { path = "../registry" }
codex-app-transfer-adapters = { path = "../adapters" }
codex-app-transfer-gemini-oauth = { path = "../gemini_oauth" }
axum = { version = "0.8", features = ["http1", "http2", "tokio", "ws"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-core = "0.3"
futures-util = "0.3"
http = "1"
# rustls-tls 走纯 Rust TLS 栈,跨平台编译时不需要 system OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "socks", "system-proxy"] }
# [MOC-125] WS 透传专用 reqwest 0.13(reqwest-websocket 0.6 要 0.13),package rename 与上面
# state.http 的 reqwest 0.12 共存 —— 只远程控制 WS 这条新路径用,**不动 state.http**,故所有
# 现有上游转发的 CF/ClientHello 指纹零变化(升级范围 A)。0.13 feature 改名 rustls-tls→rustls,
# 且 0.13 的 rustls 不再自带根证书、需显式加 webpki-roots。
reqwest13 = { package = "reqwest", version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "http2", "socks", "system-proxy"] }
reqwest-websocket = "0.6"
# [MOC-234] responses provider 上游 WS 透传用 tokio-tungstenite(Codex 同款 WS 栈)——
# reqwest-websocket 借 reqwest 连接机制、经代理握手会把域名预解析成 fake-ip 致 426;
# tokio-tungstenite 自管连接(手动 HTTP-CONNECT 时发域名让代理端解析)。`client_async_tls`
# 用 rustls + webpki-roots 在隧道流上做 TLS+WS 握手。remote-control 仍用 reqwest-websocket。
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
# [MOC-234] 经 VPN 代理建上游 WS 隧道走 SOCKS5(proxy 端解析域名,绕开客户端 fake-ip)——
# 实测 HTTP-CONNECT 隧道对部分上游会卡住/426,SOCKS 能到达真实端点(websocat 验证)。
tokio-socks = "0.5"
# [MOC-234] rustls 0.23 进程级 CryptoProvider:依赖树里 aws-lc-rs(reqwest)+ ring
# (tokio-tungstenite)同在 → 无法自动选,client_async_tls 做 TLS 会 panic。启动时显式装
# aws-lc-rs(与 reqwest 上游转发一致)。default-features=false + aws_lc_rs 仅取该 provider。
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "io-util"] }
tracing = "0.1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
indexmap = "2"
tokio-tungstenite = "0.29"
tempfile = "3"
# [MOC-195] 集成测试 main 前隔离 home(tests/common/mod.rs),版本跟 lock 内既有传递依赖一致
ctor = "0.8"
