[package]
name = "codex-app-transfer-qoder-auth"
version = "0.1.0"
description = "QoderWork CN Cosy 签名协议 —— 内嵌 qoder_auth_wasm(wasm-bindgen)并用 wasmi 驱动,产出模型请求的签名+加密头/体 + remoteChatAsk body 构造。逆向实证见 MOC-297。"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# WASM runtime。qoder_auth_wasm 是 wasm-bindgen(JS target)模块,这里在 Rust 侧
# 复刻其 31 个 host import + 内存 marshaling 来驱动。
# 选 wasmi(纯 Rust 解释器):比 wasmtime(cranelift JIT)轻得多,无系统依赖,对
# 桌面 app 体积友好;本模块每请求只调数次,解释器性能完全够。
wasmi = "0.40"
# getRandomValues host import 的真随机源(RSA/nonce)。workspace 已 transitive 依赖。
getrandom = "0.2"
thiserror = "2"
# remoteChatAsk body 构造(OpenAI 请求 → QoderWork 私有 envelope)。
serde_json = "1"
